--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 install:
   - pip install -r requirements-dev.txt
+  - pip install -r requirements.txt
 script: 
-  - black --check Azenqos/
+  - test.sh
