--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ install:
   - pip install -r requirements-dev.txt
   - pip install -r requirements.txt
 script: 
-  - Azenqos/test.sh
+  - bash Azenqos/test.sh
